added some more methods

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "castle-explorer-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "npx tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/hjrdave/castle-explorer-game#readme",
   "dependencies": {
+    "@types/prompt-sync": "^4.2.0",
     "@types/readline-sync": "^1.4.4",
+    "prompt-sync": "^4.2.0",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
